[tool.poetry]
name = "easy_questions"
version = "0.1.0"
description = ""
authors = ["Shubhrose Singh <shubhroses@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
